tests/should_fail/unreachable_state.sm
initial foo
final bar

# Can't get to baz from foo
baz -- keys [ a ] --> bar

foo --
  winc "foo"
--> pre
